fix dropdown z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -788,6 +788,7 @@
 .product__container--header-filter-btn-price-sort-list {
   display: none;
   position: absolute;
+  z-index: 1;
   top: calc(100% + 2px);
   left: 0;
   flex-direction: column;
@@ -877,6 +878,7 @@
 }
 .product-card:hover {
   top: -1px;
+  box-shadow: none;
 
 }
 .product-card-details {
